# dnsrobocert

./: .dockerignore  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile-armh  LICENSE  README.md  README.rst  _manylinux.py  config.yaml  multiarch_build.sh  pyproject.toml  setup.cfg  snapcraft.yaml  tox.ini
.azure-pipelines/: build.yml  main.yml  release.yml
.azure-pipelines/templates/: delivery-jobs.yml  deploy-jobs.yml  integration-jobs.yml  package-jobs.yml  publish-jobs.yml  releasing-jobs.yml  tests-jobs.yml
.circleci/: config.yml
.github/: dependabot.yml
.github/actions/: setup-python-dev.yml
.github/actions/setup-python-dev/: action.yml
.github/workflows/: main.yaml  main.yml  pages.yml  release.yaml  release.yml  test-results.yaml
.history/: Dockerfile_20190515080222  Dockerfile_20190515093530  Dockerfile_20190515095054
.history/files/: check-expiry_20190515075622.py  check-expiry_20190515075726.py  check-expiry_20190515075757.py  check-expiry_20190515095419.py  watch-domains_20190515095111.sh  watch-domains_20190515095131.sh  watch-domains_20190515095229.sh
compose/: .env  docker-compose.yml
docker/: run.sh
docs/: conf.py  configuration_reference.rst  developer_guide.rst  index.html  index.rst  introduction.rst  lexicon_providers_config.rst  miscellaneous.rst  providers_options.rst  user_guide.rst
files/: authenticator.sh  autocmd-containers.sh  autorestart-containers.sh  check-expiry.py  circus.ini  cleanup.sh  crontab  deploy-hook.sh  letsencrypt-dns.ini  parse_domains.sh  pfx-export-hook.sh  renew.sh  run.sh  supervisord.conf  watch-domains.sh  watch_domains.sh
src/dnsrobocert/: __init__.py  schema.yml
src/dnsrobocert/core/: __init__.py  background.py  certbot.py  challenge.py  config.py  hooks.py  legacy.py  main.py  snap.py  utils.py
test/: hooks_test.py  legacy_test.py
test/assets/: cert.pem  config.yml  key.pem
test/goss/: goss.yaml
test/integration_tests/: dnsrobocert_test.py
test/unit_tests/: certbot_test.py  config_test.py  hooks_test.py  legacy_test.py  main_test.py
tests/: goss.yaml  hooks_test.py  legacy_test.py
utils/: create_release.py  extract_changelog.py  generate_lexicon_doc.py  precompile_wheels.py
wheels/: build.json  cffi-1.14.0-cp38-cp38-linux_aarch64.whl  cffi-1.14.0-cp38-cp38-linux_armv7l.whl  cffi-1.14.0-cp38-cp38-linux_i686.whl  cffi-1.14.0-cp38-cp38-linux_ppc64le.whl  cffi-1.14.0-cp38-cp38-linux_s390x.whl  cffi-1.14.0-cp38-cp38-linux_x86_64.whl  cffi-1.14.3-cp38-cp38-linux_aarch64.whl  cffi-1.14.3-cp38-cp38-linux_armv7l.whl  cffi-1.14.3-cp38-cp38-linux_i686.whl  cffi-1.14.3-cp38-cp38-linux_ppc64le.whl  cffi-1.14.3-cp38-cp38-linux_s390x.whl  cffi-1.14.3-cp38-cp38-linux_x86_64.whl  cffi-1.14.4-cp38-cp38-linux_aarch64.whl  cffi-1.14.4-cp38-cp38-linux_armv7l.whl  cffi-1.14.4-cp38-cp38-linux_i686.whl  cffi-1.14.4-cp38-cp38-linux_ppc64le.whl  cffi-1.14.4-cp38-cp38-linux_s390x.whl  cffi-1.14.4-cp38-cp38-linux_x86_64.whl  cffi-1.14.5-cp39-cp39-linux_aarch64.whl  cffi-1.14.5-cp39-cp39-linux_armv7l.whl  cffi-1.14.5-cp39-cp39-linux_i686.whl  cffi-1.14.5-cp39-cp39-linux_ppc64le.whl  cffi-1.14.5-cp39-cp39-linux_x86_64.whl  cryptography-2.9.2-cp38-cp38-linux_aarch64.whl  cryptography-2.9.2-cp38-cp38-linux_armv7l.whl  cryptography-2.9.2-cp38-cp38-linux_i686.whl  cryptography-2.9.2-cp38-cp38-linux_ppc64le.whl  cryptography-2.9.2-cp38-cp38-linux_s390x.whl  cryptography-2.9.2-cp38-cp38-linux_x86_64.whl  cryptography-3.2.1-cp38-cp38-linux_aarch64.whl  cryptography-3.2.1-cp38-cp38-linux_armv7l.whl  cryptography-3.2.1-cp38-cp38-linux_i686.whl  cryptography-3.2.1-cp38-cp38-linux_ppc64le.whl  cryptography-3.2.1-cp38-cp38-linux_s390x.whl  cryptography-3.2.1-cp38-cp38-linux_x86_64.whl  cryptography-3.3.1-cp38-cp38-linux_aarch64.whl  cryptography-3.3.1-cp38-cp38-linux_armv7l.whl  cryptography-3.3.1-cp38-cp38-linux_i686.whl  cryptography-3.3.1-cp38-cp38-linux_ppc64le.whl  (+38 more)
