[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dnsrobocert"
version = "3.17.0"
description = "A tool to manage your DNS-challenged TLS certificates"
license = "MIT"
keywords = [
    "dnsrobocert"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix", "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities"
]
authors = [
    "Adrien Ferrand"
]
readme = "README.rst"
include = [
    "src/dnsrobocert/schema.yml"
]
repository = "https://github.com/adferrand/dnsrobocert"
homepage = "https://dnsrobocert.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.7"
acme = "^1"
certbot = "^1"
dns-lexicon = { version = "^3", extras = [ "full" ] }
# Optional deps on dns-lexicon
zeep = "*"
xmltodict = "*"
softlayer = "*"
localzone = "*"
boto3 = "*"
# --
cryptography = ">=2"
cffi = ">=1"
lxml = ">=4"
dnspython = ">=2"
jsonschema = ">=3"
pem = ">=20"
pyopenssl = ">=19"
pyyaml = ">=5"
schedule = ">=0"
coloredlogs = ">=14"
colorama = ">=0"
tldextract = ">=3"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
isort = "*"
requests = "*"
pygments = "*"
twine = "*"
tox = "*"
types-PyYAML = "*"
types-pyOpenSSL = "*"
types-requests = "*"
types-setuptools = "*"

[tool.poetry.scripts]
dnsrobocert = "dnsrobocert.core.main:main"
